--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">iSketch.app</string>
     <string name="app_start_url">https://play.isketch.app</string>
+    <string name="connecting_to_server">Connecting to server...</string>
+    <string name="isketch_logo">iSketch Logo</string>
 </resources>
